# insta-backend

./: .env.example  ARCHITECTURE_RULES.md  GEMINI.md  README.md  debug_health.py  docker-compose.yml  main.py  pyproject.toml
alembic/: env.py
alembic/versions/: 00a8900dbb77_create_follows_table.py  61d6e903eb95_create_users_table.py  9b1234567890_add_performance_indexes_to_posts.py  c7c37e6b1b59_create_posts_table.py  fddc693df640_increase_username_length.py
src/application/common/: password_hasher.py  token_service.py
src/application/follows/: follow_repository.py
src/application/follows/use_cases/: follow_user.py  get_followers.py  get_following.py  unfollow_user.py
src/application/health/: health_check.py  health_repository.py
src/application/posts/: post_repository.py  post_storage.py
src/application/posts/use_cases/: create_post.py  get_post.py  list_posts.py
src/application/users/: avatar_storage.py  login_user.py  register_user.py  update_user_profile.py  user_repository.py
src/domain/: health.py
src/domain/follows/: entity.py  exceptions.py
src/domain/posts/: entity.py  exceptions.py
src/domain/users/: exceptions.py  user.py
src/infrastructure/persistence/: database.py
src/infrastructure/persistence/orm/: __init__.py  follow.py  post.py  user.py
src/infrastructure/services/: jwt.py  password.py  post_storage.py  storage.py
src/interfaces/api/: auth.py  dependencies.py  follows.py  health.py  posts.py  router.py  users.py
tests/integration/: test_follows_flow.py  test_posts_flow.py
(+6 files in other folders)
